data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_657.wast
;; 8. **Failing Condition Based on External Input**:    - Set up a scenario where the condition for a `br_if` is based on external input (e.g., user input causing a value to be pushed onto the stack). If the input does not meet the condition criteria (false), ensure no branch happens, testing if external input is correctly checked.

(assert_invalid
  (module
    (func $external-input-test
      (param $input i32)
      (block (result i32)
        (br_if 0 (local.get $input))
      )
      (i32.const 0)
      (drop)
    )
  )
  "type mismatch"
)